[package]
name = "transaction_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-error = "0.1.0"
csv = "1.1.6"
rust_decimal = { version="1.25.0", features=["serde-with-str", "serde-str"] }
serde = { version="1.0.139", features=["derive"] }
